translation-tool/inputs/source_meta/objects/Installation_Project__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Customer from the Accounts Table</description>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Installation Projects</relationshipLabel>
        <relationshipName>Installation_Projects</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Program__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Customer Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Installation Projects</relationshipLabel>
        <relationshipName>Installation_Projects</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unique__c</fullName>
        <description>Salesforce generated unique ID</description>
        <externalId>true</externalId>
        <label>Unique</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Installation Project</label>
    <nameField>
        <label>Installation Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Installation Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>